--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=audiobook
+server.port=9000
+
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+
+spring.datasource.driver-class-name=org.postgresql.Driver
